Update volunteer form link

--- a/src/components/FestivalVolunteer.astro
+++ b/src/components/FestivalVolunteer.astro
@@ -1,5 +1,5 @@
 ---
-import Title from './Title.astro';
+import Title from "./Title.astro";
 ---
 
 <div class="content-container">
@@ -9,7 +9,7 @@ import Title from './Title.astro';
     group of people that help run HONK! Fest West every year.
   </p>
   <a
-    href="https://volunteer-hfw.netlify.app"
+    href="https://pointapp.org/orgs/3346"
     class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-navy w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
   >
     » SIGN UP HERE
