--- a/src/components/home/HonkAllstars.astro
+++ b/src/components/home/HonkAllstars.astro
@@ -1,17 +1,16 @@
 ---
-import { Image } from "astro:assets";
 import Title from "@components/Title.astro";
+import allstarsTile from "@images/bands/allstars.jpg";
 ---
 
-<div class="flex-none sm:pr-6 mb-3 sm:mb-0 z-10 flex justify-center">
-  <!-- <a href="https://forms.gle/ytEWj51dHagkwECf7">
-    <Image
-      src="https://ik.imagekit.io/thegoldendino/hfw/2024/band-app-deadline-2024_mIKkAfz_U.png?updatedAt=1703309664920"
-      alt="HONK! Festival West 2024 Band Application Deadline is January 31st, 2024"
-      width="300"
-      height="300"
-      class="h-auto mx-auto"
-      format="png"
-    />
-  </a> -->
+<div class="flex flex-col w-full h-full">
+  <Title title="HONK!" subtitle="All Stars" />
+  <div class="rounded-lg overflow-hidden">
+    <a
+      href="/allstars"
+      class="w-full h-full block min-h-80 bg-contain bg-repeat-x bg-center"
+      style=`background-image: url("${allstarsTile.src}");`
+    >
+    </a>
+  </div>
 </div>
