fix sunday data

--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -1,6 +1,5 @@
 ---
 import Title from '@components/Title.astro';
-import type { now } from 'svelte/internal';
 ---
 
 <!-- INFO BLOCK -->
@@ -28,7 +27,7 @@ import type { now } from 'svelte/internal';
           class="block antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105"
           href="/festival"
         >
-          <!-- » More Info -->
+          » More Info
         </a>
       </div>
     </div>
