--- a/src/components/home/BandAppDeadline.astro
+++ b/src/components/home/BandAppDeadline.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from "astro:assets";
-import Title from "@components/Title.astro";
+import { Image } from 'astro:assets';
+import Title from '@components/Title.astro';
 ---
 
 <div class="flex-none sm:pr-6 mb-3 sm:mb-0 z-10 flex justify-center">
@@ -8,10 +8,8 @@ import Title from "@components/Title.astro";
     <Image
       src="https://ik.imagekit.io/thegoldendino/hfw/2024/band-app-deadline-2024_mIKkAfz_U.png?updatedAt=1703309664920"
       alt="HONK! Festival West 2024 Band Application Deadline is January 31st, 2024"
-      width="300"
-      height="300"
       class="h-auto mx-auto"
-      format="png"
+      inferSize
     />
   </a>
 </div>
