--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "astro:assets";
+import { Image } from 'astro:assets';
 ---
 
 <a
@@ -9,10 +9,8 @@ import { Image } from "astro:assets";
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/givebig_AxdkXr2m7.webp?updatedAt=1682358102945"
     alt="GiveBIG 2024"
-    width="300"
-    height="300"
     class="h-auto w-auto mx-auto"
-    format="png"
+    inferSize
   />
 </a>
 <div class="z-10">
