--- a/src/components/home/HonkFuture.astro
+++ b/src/components/home/HonkFuture.astro
@@ -1,7 +1,7 @@
 ---
-import { Image } from "astro:assets";
-import Title from "@components/Title.astro";
-import futureImg from "@images/2024/honk-future-2024.png";
+import { Image } from 'astro:assets';
+import Title from '@components/Title.astro';
+import futureImg from '@images/2024/honk-future-2024.png';
 ---
 
 <div class="flex-none sm:pr-6 mb-3 sm:mb-0 z-10 flex justify-center">
