--- a/src/components/about/CommitteePhotos.astro
+++ b/src/components/about/CommitteePhotos.astro
@@ -1,5 +1,9 @@
 ---
-import { Image } from "astro:assets";
+import { Image } from 'astro:assets';
+
+interface Props {
+  photos: Array<{ image_url: string; name: string }>;
+}
 
 const { photos } = Astro.props;
 ---
@@ -13,15 +17,13 @@ const { photos } = Astro.props;
 </h2>
 <div class="flex flex-wrap justify-around gap-6">
   {
-    photos.map((member) => (
+    photos.map((member: { image_url: string; name: string }) => (
       <div class="flex flex-col items-center">
         <Image
           class="rounded-full h-32 w-auto mb-2 border-[.5rem] border-cobalt"
           src={member.image_url}
           alt={member.name}
-          width="150"
-          height="150"
-          format="jpeg"
+          inferSize
         />
         <p class="content text-center ">
           <span class="text-shadow text-gray-200 text-xl font-black">
