--- a/src/components/home/BonfireMerch.astro
+++ b/src/components/home/BonfireMerch.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from "astro:assets";
-import Title from "@components/Title.astro";
+import { Image } from 'astro:assets';
+import Title from '@components/Title.astro';
 ---
 
 <div
@@ -9,34 +9,26 @@ import Title from "@components/Title.astro";
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/w-sf-tee_M8LoplcrPt.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265502"
     alt="Women's Tee"
-    width="175"
-    height="175"
     class="h-auto mx-auto"
-    format="jpeg"
+    inferSize
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/hoodie_SeVGLGU0P.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265358"
     alt="Hoodie"
-    width="175"
-    height="175"
     class="h-auto mx-auto"
-    format="jpeg"
+    inferSize
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/sweatshirt_wQDzFBnhe.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265376"
     alt="Sweatshirt"
-    width="175"
-    height="175"
     class="h-auto mx-auto"
-    format="jpeg"
+    inferSize
   />
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2022/bonfire-merch/unisex-tank_6K0RGsM-c.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1650777265418"
     alt="Unisex Tank"
-    width="175"
-    height="175"
     class="h-auto mx-auto"
-    format="jpeg"
+    inferSize
   />
 </div>
 <div class="z-10">
