fix footer supporter images

--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets';
 ---
 
 <a
-  class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10 block hover:scale-105"
+  class="md:w-1/3 flex-none md:pr-6 flex mb-3 md:mb-0 flex-col z-10 hover:scale-105"
   href="https://www.wagives.org/organization/honk-fest-west/"
 >
   <Image
