--- a/src/components/home/ThursdayFundraiser.astro
+++ b/src/components/home/ThursdayFundraiser.astro
@@ -7,10 +7,8 @@ import Title from "@components/Title.astro";
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2023/Events/thursday-bad-jimmys-2023_Z8zW37d7q.jpg?updatedAt=1685660137371&tr=w-600"
     alt="HONK! Fest West Kickoff Opening Night"
-    width="600"
-    height="600"
     class="h-auto mx-auto"
-    format="png"
+    inferSize
   />
 </div>
 <div class="z-10">
