--- a/src/components/old/VolunteerCoordinatorNeeded.astro
+++ b/src/components/old/VolunteerCoordinatorNeeded.astro
@@ -7,10 +7,8 @@ import Title from "@components/Title.astro";
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/posts/volunteer_eH1tKog7f.jpg?updatedAt=1640916421073"
     alt="Volunteer!"
-    width="640"
-    height="349"
     class="h-auto max-h-60 w-auto mx-auto"
-    format="jpeg"
+    inferSize
   />
 </div>
 <div class="z-10">
