--- a/src/pages/supporters/index.astro
+++ b/src/pages/supporters/index.astro
@@ -98,7 +98,7 @@ import type { Supporter } from 'src/env';
             <a href="{supporters.art[1].url}">{supporters.art[1].name}</a>.
           </span>
           <span
-            class="block grid grid-cols-3 gap-2 sm:gap-10 sm:flex-nowrap mt-2 sm:mb-5"
+            class="grid grid-cols-3 gap-2 sm:gap-10 sm:flex-nowrap mt-2 sm:mb-5"
           >
             {
               supporters.art.map((supporter: Supporter) => (
