--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,7 +39,7 @@ const { supporters, social }: Props = Astro.props;
                   <Image
                     src={supporter.image_url}
                     alt={supporter.name}
-                    class="rounded"
+                    class="rounded h-[54px] w-auto"
                     inferSize
                   />
                 </a>
@@ -58,7 +58,7 @@ const { supporters, social }: Props = Astro.props;
     class="max-w-screen-xl w-full mx-auto p-1 sm:p-0 flex flex-wrap sm:flex-nowrap items-center"
   >
     <a
-      class="w-full text-center text-cobalt text-lg font-bold font-base block w-full sm:w-1/3 m-1 sm:m-4"
+      class="w-full text-center text-cobalt text-lg font-bold font-base block sm:w-1/3 m-1 sm:m-4"
       href="/">© {new Date().getFullYear()} HONK! Fest West</a
     >
     <ul
