--- a/src/components/home/MardiGrasFundraiser.astro
+++ b/src/components/home/MardiGrasFundraiser.astro
@@ -7,10 +7,8 @@ import Title from "@components/Title.astro";
   <Image
     src="https://ik.imagekit.io/thegoldendino/hfw/2023/Events/mardi-gras-fundraiser-2023_y-fFuSPD3.png?ik-sdk-version=javascript-1.4.3&updatedAt=1674435215464"
     alt="Mardi Gras Fundraiser 2023"
-    width="260"
-    height="402"
     class="h-auto mx-auto"
-    format="png"
+    inferSize
   />
 </div>
 <div class="z-10">
