Clean up homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
-import { Image } from "astro:assets";
-import BaseLayout from "@layouts/BaseLayout.astro";
-import LinkBlurb from "@components/LinkBlurb.astro";
-import NewsletterForm from "@components/NewsletterForm.astro";
-import Slideshow from "../components/slideshow/Slideshow.svelte";
-import BackToTop from "@components/BackToTop.astro";
-import FestivalInfoBlock from "@components/home/FestivalInfoBlock.astro";
-import HonkFuture from "@components/home/HonkFuture.astro";
-import HonkAllstars from "@components/home/HonkAllstars.astro";
+import { Image } from 'astro:assets';
+import BaseLayout from '@layouts/BaseLayout.astro';
+import LinkBlurb from '@components/LinkBlurb.astro';
+import NewsletterForm from '@components/NewsletterForm.astro';
+import Slideshow from '../components/slideshow/Slideshow.svelte';
+import BackToTop from '@components/BackToTop.astro';
+import FestivalInfoBlock from '@components/home/FestivalInfoBlock.astro';
+import HonkFuture from '@components/home/HonkFuture.astro';
+import HonkAllstars from '@components/home/HonkAllstars.astro';
 
-import slideshow from "@data/slideshow.toml";
-import BandAppDeadline from "@components/home/BandAppDeadline.astro";
+import slideshow from '@data/slideshow.toml';
+import BandAppDeadline from '@components/home/BandAppDeadline.astro';
 ---
 
 <BaseLayout title="Home">
@@ -36,13 +36,7 @@ import BandAppDeadline from "@components/home/BandAppDeadline.astro";
     </section>
 
     <article
-      class="w-full content-container col-span-6 xl:col-span-4 flex flex-col md:flex-row"
-    >
-      <HonkFuture />
-    </article>
-
-    <article
-      class="w-full content-container col-span-6 xl:col-span-2 flex flex-col md:flex-row"
+      class="w-full content-container col-span-6 flex flex-col md:flex-row"
     >
       <HonkAllstars />
     </article>
