--- a/src/components/home/HonkAllstars.astro
+++ b/src/components/home/HonkAllstars.astro
@@ -1,16 +1,23 @@
 ---
-import Title from "@components/Title.astro";
-import allstarsTile from "@images/bands/allstars.jpg";
+import Title from '@components/Title.astro';
+import allstarsTile from '@images/bands/allstars.jpg';
 ---
 
 <div class="flex flex-col w-full h-full">
   <Title title="HONK!" subtitle="All Stars" />
   <div class="rounded-lg overflow-hidden">
-    <a
-      href="/allstars"
-      class="w-full h-full block min-h-80 bg-contain bg-repeat-x bg-center"
-      style=`background-image: url("${allstarsTile.src}");`
-    >
-    </a>
+    <div class="flex flex-col items-center">
+      <a
+        href="/allstars"
+        class="w-full h-full block min-h-80 bg-contain bg-repeat-x bg-center"
+        style=`background-image: url("${allstarsTile.src}");`
+      >
+      </a>
+      <a
+        href="/allstars"
+        class="text-shadow block font-base antialiased text-base sm:text-lg text-pink-lt font-bold flex-none mt-3 z-10 relative hover:scale-105"
+        >» Come join us</a
+      >
+    </div>
   </div>
 </div>
