--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,10 @@ import NewsletterForm from '@components/NewsletterForm.astro';
 import Slideshow from '../components/slideshow/Slideshow.svelte';
 import BackToTop from '@components/BackToTop.astro';
 import FestivalInfoBlock from '@components/home/FestivalInfoBlock.astro';
-import HonkFuture from '@components/home/HonkFuture.astro';
 import HonkAllstars from '@components/home/HonkAllstars.astro';
 
+// @ts-ignore
 import slideshow from '@data/slideshow.toml';
-import BandAppDeadline from '@components/home/BandAppDeadline.astro';
 ---
 
 <BaseLayout title="Home">
