--- a/src/pages/media/index.astro
+++ b/src/pages/media/index.astro
@@ -5,6 +5,8 @@ import BackToTop from '@components/BackToTop.astro';
 import PhotosVideo from '@components/media/PhotosVideo.astro';
 import MarkdownContent from '@components/MarkdownContent.astro';
 import { rawContent as articles } from '@data/articles.md';
+
+// @ts-ignore
 import media from '@data/media.toml';
 ---
 
