re-write color arch

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,11 @@
 ---
-import Head from "@components/base-head/BaseHead.astro";
-import Header from "@components/Header.astro";
-import Footer from "@components/Footer.astro";
-import BackgroundImage from "@components/BackgroundImage.astro";
-import nav from "@data/nav.toml";
-import footer from "@data/footer.toml";
-import social from "@data/social.toml";
+import Head from '@components/base-head/BaseHead.astro';
+import Header from '@components/Header.astro';
+import Footer from '@components/Footer.astro';
+import BackgroundImage from '@components/BackgroundImage.astro';
+import nav from '@data/nav.toml';
+import footer from '@data/footer.toml';
+import social from '@data/social.toml';
 
 const { title } = Astro.props;
 ---
@@ -24,8 +24,8 @@ const { title } = Astro.props;
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
-      <div class="bg-aqua w-full h-full fixed top-0 left-0"></div>
-      <BackgroundImage />
+      <div class="bg-background w-full h-full fixed top-0 left-0"></div>
+      <!--   <BackgroundImage /> -->
     </div>
 
     <div
