--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -74,7 +74,7 @@ const { supporters, social }: Props = Astro.props;
     </ul>
     <GoldenDino client:visible />
     <a
-      class="text-shadow w-full text-center font-base link text-pink font-bold text-lg block sm:w-1/3 m-1 sm:m-4 underline hover:scale-105"
+      class="text-shadow w-full text-center font-base link text-content_btt font-bold text-lg block sm:w-1/3 m-1 sm:m-4 underline hover:scale-105"
       href="#"
     >
       Back to top
