--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,12 +26,12 @@ const activeListItem = (link: string) => {
 <!-- H!FW LOGO -->
 
 <div
-  class="min-h-[153px] sm:min-h-[273px] flex justify-center w-full relative z-10 mt-6 sm:mt-12 mb-4"
+  class="flex justify-center w-full relative z-10 py-6 px-6 sm:px-0 sm:py-12 mb-4 bg-black"
 >
   <h1 class="w-full">
     <a class="block mx-auto sm:w-2/3 lg:w-2/5 z-0 peer" href="/">
       <Image
-        src="https://ik.imagekit.io/thegoldendino/hfw/2023/logo-2023_zZNEDpiqu.png?ik-sdk-version=javascript-1.4.3&updatedAt=1668291679349"
+        src="https://ik.imagekit.io/thegoldendino/hfw/2024/logo-transparent-2_dKhnt6rEo.png?updatedAt=1716050361069"
         alt="HONK! Fest West"
         class="w-auto mx-auto hover:transition ease-in hover:scale-105"
         inferSize
