--- a/src/components/NewsletterForm.astro
+++ b/src/components/NewsletterForm.astro
@@ -5,7 +5,7 @@ import Title from '@components/Title.astro';
 <div
   class="flex flex-col items-center h-full justify-center font-emphasis font-medium"
 >
-  <!-- <span class="block text-pink mb-2 tracking-wide text-2xl md:text-3xl">
+  <!-- <span class="block text-accent mb-2 tracking-wide text-2xl md:text-3xl">
     NEWSLETTER
   </span> -->
   <Title title="Newsletter" center={true} border={false} />
