--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -17,14 +17,14 @@ const _id = id.length ? id : title;
   }`}
 >
   <span
-    class={`text-pink-lt  ${center && subtitle ? 'ml-3' : ''} ${
+    class={`text-content_title  ${center && subtitle ? 'ml-3' : ''} ${
       subtitle ? 'mr-3' : ''
     } block ${center ? 'text-center' : ''}`}
   >
     {title}
   </span>
   <span
-    class={`text-pink block ${center && subtitle ? 'ml-3' : ''} ${
+    class={`text-accent block ${center && subtitle ? 'ml-3' : ''} ${
       subtitle ? 'mr-3' : ''
     } ${center ? 'text-center' : ''}`}
   >
