--- a/src/components/about/CommitteePhotos.astro
+++ b/src/components/about/CommitteePhotos.astro
@@ -9,10 +9,10 @@ const { photos } = Astro.props;
 ---
 
 <h2
-  class="text-3xl sm:text-4xl text-cobalt text-center tracking-wide mb-8 font-bold bg-pink"
+  class="text-3xl sm:text-4xl text-cobalt text-center tracking-wide mb-8 font-bold bg-accent"
 >
   YOUR
-  <span class="text-pink bg-cobalt px-2">HONK! FEST WEST</span>
+  <span class="text-accent bg-cobalt px-2">HONK! FEST WEST</span>
   COMMITTEE
 </h2>
 <div class="flex flex-wrap justify-around gap-6">
