--- a/src/components/home/GiveBig.astro
+++ b/src/components/home/GiveBig.astro
@@ -35,7 +35,7 @@ import { Image } from 'astro:assets';
     year.
   </p>
   <a
-    class="text-shadow block font-base antialiased text-base sm:text-lg text-pink-lt font-bold flex-none mt-3 z-10 relative hover:scale-105 hover:left-4"
+    class="text-shadow block font-base antialiased text-base sm:text-lg text-accent-lt font-bold flex-none mt-3 z-10 relative hover:scale-105 hover:left-4"
     href="https://www.wagives.org/organization/honk-fest-west/"
   >
     » GiveBIG & Thank You!
