--- a/src/components/home/HonkAllstars.astro
+++ b/src/components/home/HonkAllstars.astro
@@ -15,7 +15,7 @@ import allstarsTile from '@images/bands/allstars.jpg';
       </a>
       <a
         href="/allstars"
-        class="text-shadow block font-base antialiased text-base sm:text-lg text-pink-lt font-bold flex-none mt-3 z-10 relative hover:scale-105"
+        class="text-shadow block font-base antialiased text-base sm:text-lg text-accent-lt font-bold flex-none mt-3 z-10 relative hover:scale-105"
         >» Come join us</a
       >
     </div>
