--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -109,6 +109,6 @@ import contact from '@data/contact.toml';
   }
 
   a.button:hover {
-    @apply scale-105 bg-pink transition ease-in-out;
+    @apply scale-105 bg-accent transition ease-in-out;
   }
 </style>
