--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import slideshow from '@data/slideshow.toml';
       </p>
       <br />
       <a
-        class="text-shadow block ease-in font-base link text-pink-lt font-bold text-base sm:text-lg relative hover:scale-105 hover:left-6"
+        class="text-shadow block ease-in font-base link text-accent-lt font-bold text-base sm:text-lg relative hover:scale-105 hover:left-6"
         href="https://www.duwamishtribe.org/donate"
       >
         » Please support the Duwamish Tribe
