--- a/src/components/home/FestivalInfoBlock.astro
+++ b/src/components/home/FestivalInfoBlock.astro
@@ -9,7 +9,7 @@ import Title from '@components/Title.astro';
     <div
       class="text-shadow flex flex-col items-center h-full text-xl sm:text-3xl font-medium tracking-wide z-10"
     >
-      <span class="text-pink text-center mb-2 hidden font-emphasis">
+      <span class="text-accent text-center mb-2 hidden font-emphasis">
         <span class="text-gray-200">HONK!</span> FEST WEST
       </span>
       <div class="flex flex-col lg:flex-row justify-center items-center w-full">
