--- a/src/pages/supporters/index.astro
+++ b/src/pages/supporters/index.astro
@@ -91,7 +91,7 @@ import supporters from '@data/supporters.toml';
             }
           </span>
           <span
-            class="border-b-4 border-opacity-60 border-pink border-dotted w-full block mb-4"
+            class="border-b-4 border-opacity-60 border-accent border-dotted w-full block mb-4"
           ></span>
 
           <span>
@@ -117,7 +117,7 @@ import supporters from '@data/supporters.toml';
           </span>
 
           <span
-            class="border-b-4 border-opacity-60 border-pink border-dotted w-full block mb-4"
+            class="border-b-4 border-opacity-60 border-accent border-dotted w-full block mb-4"
           ></span>
 
           <span>
@@ -146,7 +146,7 @@ import supporters from '@data/supporters.toml';
         </div>
 
         <span
-          class="border-b-4 border-opacity-60 border-pink border-dotted w-full block mb-4"
+          class="border-b-4 border-opacity-60 border-accent border-dotted w-full block mb-4"
         ></span>
 
         <p>
