--- a/src/pages/volunteer/committee-form.astro
+++ b/src/pages/volunteer/committee-form.astro
@@ -23,13 +23,13 @@ import Title from '@components/Title.astro';
       data-netlify="true"
     >
       <input type="hidden" name="position" id="position" value="" />
-      <h2 class="text-3xl mb-5 title text-pink">
+      <h2 class="text-3xl mb-5 title text-accent">
         <span class="underline title" id="position-title"></span>
       </h2>
       <label class="hidden">
         First Name <input name="firsthumanwinkwinkname" type="text" />
       </label>
-      <div class="space-y-8 divide-y divide-pink">
+      <div class="space-y-8 divide-y divide-accent">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
           <section class="grid grid-cols-1 gap-3">
             <div>
