chore: Update landing page image with 2024 H!FW Horn Beast artwork

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,15 +17,13 @@ import slideshow from '@data/slideshow.toml';
     <FestivalInfoBlock />
 
     <section
-      class="col-span-6 lg:col-span-4 row-span-2 flex justify-center rounded-full w-full relative"
+      class="mt-5 sm:mt-10 lg:mt-0 col-span-6 lg:col-span-4 row-span-2 flex justify-center rounded-full w-full relative"
     >
       <Image
-        src="https://ik.imagekit.io/thegoldendino/hfw/2023/android-group_BIvVp6J2w.png?ik-sdk-version=javascript-1.4.3&updatedAt=1668315813976"
-        alt="Let Us Transform"
-        class="lg:absolute lg:-top-8 w-[700px]"
-        width="700"
-        height="449"
-        format="png"
+        src="https://ik.imagekit.io/thegoldendino/hfw/2024/horn-beast-dwight-vantuyl-2024_YfWS_2htn.png?updatedAt=1716057969005"
+        alt="2024 H!FW Horn Beast by Dwight VanTuyl"
+        class="object-cover rounded-xl w-full max-h-[470px] object-top"
+        inferSize
       />
     </section>
 
